sos/include/sos/sos.h

/** \defgroup cont SOS Containers
 * @{
 */

/** \defgroup cont_types Container Types
 * @{
 */
typedef struct sos_container_s *sos_t;
typedef enum sos_perm_e {
	SOS_PERM_RD = ODS_PERM_RD,
	SOS_PERM_WR = ODS_PERM_WR,
	SOS_PERM_RW = ODS_PERM_RW,
	SOS_PERM_CREAT = ODS_PERM_CREAT,
	SOS_BE_MMOS = ODS_BE_MMAP,
	SOS_BE_LSOS = ODS_BE_LSOS,
	SOS_PERM_USER = 512
} sos_perm_t;
#define SOS_CONTAINER_NAME_LEN  128
#define SOS_CONFIG_NAME_LEN	128
/**
 * \brief Specifies whether to commit synchronously or asynchronously
 */
typedef enum sos_commit_e {
	/** Returns immediately, the sync to storage will be completed
	 *  asynchronously */
	SOS_COMMIT_ASYNC,
	/** Does not return until the sync is complete */
	SOS_COMMIT_SYNC
} sos_commit_t;
typedef struct sos_config_iter_s *sos_config_iter_t;
typedef struct sos_config_data_s {
	char name[SOS_CONFIG_NAME_LEN];
	char value[0];
} *sos_config_t;
#define SOS_VERS_MAJOR	ODS_VER_MAJOR
#define SOS_VERS_MINOR	ODS_VER_MINOR
#define SOS_VERS_FIX	ODS_VER_FIX
struct sos_version_s {
	uint8_t major;		/* Binary compatability */
	uint8_t minor;		/* Feature availability */
	uint16_t fix;		/* Defect repair */
	char git_commit_id[44];	/* git commit id */
};
/** @} */

/** \defgroup schema SOS Schema
 * @{
 */

/** \defgroup schema_types Schema Types
 * @{
 */
typedef struct sos_attr_s *sos_attr_t;
typedef struct sos_index_s *sos_index_t;
typedef struct sos_schema_s *sos_schema_t;
typedef struct sos_obj_s *sos_obj_t;
#define SOS_SCHEMA_NAME_LEN	256
#define SOS_ATTR_NAME_LEN	256
#define SOS_INDEX_NAME_LEN	256
#define SOS_INDEX_KEY_TYPE_LEN	64
#define SOS_INDEX_TYPE_LEN	64
#define SOS_INDEX_ARGS_LEN	256
typedef enum sos_type_e {
	/** All types up to the arrays are fixed size */
	SOS_TYPE_INT16 = 0,
	SOS_TYPE_FIRST = SOS_TYPE_INT16,
	SOS_TYPE_INT32,
	SOS_TYPE_INT64,
	SOS_TYPE_UINT16,
	SOS_TYPE_UINT32,
	SOS_TYPE_UINT64,
	SOS_TYPE_FLOAT,
	SOS_TYPE_DOUBLE,
	SOS_TYPE_LONG_DOUBLE,
	SOS_TYPE_TIMESTAMP,
	SOS_TYPE_OBJ,
	SOS_TYPE_STRUCT,
	SOS_TYPE_JOIN,
	SOS_TYPE_BYTE_ARRAY = 32,
	SOS_TYPE_ARRAY = SOS_TYPE_BYTE_ARRAY,
	SOS_TYPE_CHAR_ARRAY,
	SOS_TYPE_STRING = SOS_TYPE_CHAR_ARRAY,
	SOS_TYPE_INT16_ARRAY,
	SOS_TYPE_INT32_ARRAY,
	SOS_TYPE_INT64_ARRAY,
	SOS_TYPE_UINT16_ARRAY,
	SOS_TYPE_UINT32_ARRAY,
	SOS_TYPE_UINT64_ARRAY,
	SOS_TYPE_FLOAT_ARRAY,
	SOS_TYPE_DOUBLE_ARRAY,
	SOS_TYPE_LONG_DOUBLE_ARRAY,
	SOS_TYPE_OBJ_ARRAY,
	SOS_TYPE_LAST = SOS_TYPE_OBJ_ARRAY
} sos_type_t;
typedef ods_idx_data_t sos_idx_data_t;
typedef union sos_obj_ref_s {
	ods_idx_data_t idx_data;
	struct sos_idx_ref_s {
		uuid_t part_uuid;	/* The reference to the ODS */
		ods_ref_t obj;		/* The object reference */
	} ref;
	struct dsos_ref_s {
		u_long cont_id;
		u_long client_id;
		u_long part_id;
		u_long schema_id;
		ods_ref_t obj_ref;
	} dsos_ref;
} sos_obj_ref_t;
static inline void sos_ref_reset(sos_obj_ref_t ref)
{
	uuid_clear(ref.ref.part_uuid);
	ref.ref.obj = 0;
}
union sos_array_element_u {
	char char_[0];
	uint8_t byte_[0];
	uint16_t uint16_[0];
	uint32_t uint32_[0];
	uint64_t uint64_[0];
	int16_t int16_[0];
	int32_t int32_[0];
	int64_t int64_[0];
	float float_[0];
	double double_[0];
	long double long_double_[0];
	sos_obj_ref_t ref_[0];
};
typedef struct sos_array_info_s {
	uint32_t size;
	uint32_t offset;
} *sos_array_info_t;
typedef struct sos_array_s {
	uint32_t count;
	union sos_array_element_u data;
} *sos_array_t;
struct sos_timeval_s {
	uint32_t usecs;
	uint32_t secs;
};
union sos_timestamp_u {
	uint64_t timestamp;
	struct ods_timeval_s tv;
	struct sos_timeval_s fine;
};
union sos_primary_u {
	unsigned char byte_;
	uint16_t uint16_;
	uint32_t uint32_;
	uint64_t uint64_;
	int16_t int16_;
	int32_t int32_;
	int64_t int64_;
	float float_;
	double double_;
	long double long_double_;
	union sos_timestamp_u timestamp_;
	union sos_obj_ref_s ref_;
	uint8_t struc_[0];
};
typedef union sos_value_data_u {
	union sos_primary_u prim;
	union sos_array_element_u struc;
	struct sos_array_info_s array_info;
	struct sos_array_s array;
	struct sos_array_s join;
	char __pad[256];
} *sos_value_data_t;
/*! Describes the value of an attribute in an object */
typedef struct sos_value_s {
	sos_obj_t obj;		/*! The object to which the value refers  */
	sos_type_t type;	/*! The value type, used when attr is NULL, i.e. this is a constant */
	sos_attr_t attr;	/*! The attribute in the object */
	sos_value_data_t data;	      /*! Points at data_ or into obj */
	union sos_value_data_u data_; /*! Memory based value data */
} *sos_value_t;
enum sos_cond_e {
	SOS_COND_LT,
	SOS_COND_LE,
	SOS_COND_EQ,
	SOS_COND_GE,
	SOS_COND_GT,
	SOS_COND_NE,
};
typedef enum sos_cond_e sos_cond_t;
typedef struct sos_schema_template_attr {
	const char *name;
	sos_type_t type;
	size_t size;		/*! Must be specified if the type is SOS_TYPE_STRUCT or SOS_TYPE_JOIN */
	const char **join_list;	/*! An array of attribute names */
	int indexed;
	const char *idx_type;
	const char *key_type;
	const char *idx_args;
} *sos_schema_template_attr_t;
typedef struct sos_schema_template {
	const char *name;
	const char *uuid;
	struct sos_schema_template_attr attrs[];
} *sos_schema_template_t;