sos/src/sos_priv.h

/*
 * This is the in-memory partition structure that is created when the partition is opened.
 */
struct sos_part_s {
	struct sos_ref_s ref_count;
	sos_t sos;
	char *path;		/* The path to the partition on disk */
	ods_obj_t ref_obj;	/* sos_part_ref_s object */
	ods_obj_t udata_obj;	/* sos_part_udata_s object */
	ods_t obj_ods;		/* ODS where objects are stored */
	TAILQ_ENTRY(sos_part_s) entry;
	struct ods_rbn rbn;	/* Key is ref_obj->path */
};
struct sos_obj_s {
	ods_atomic_t ref_count;
	sos_t sos;
	sos_part_t part;
	sos_schema_t schema;
	sos_obj_ref_t obj_ref;
	ods_obj_t obj;
	LIST_ENTRY(sos_obj_s) entry;
	size_t size;
	uint64_t next_array_off;
};
typedef struct sos_attr_data_s {
	char name[SOS_ATTR_NAME_LEN];
	uint32_t id;
	uint32_t indexed:1;	/* !0 if there is an associated index */
	uint32_t type:7;	/* Attribute type */
	uint32_t pad:24;
	uint32_t el_sz:8;	/* The size of each element if array */
	uint32_t reserved:24;	/* not used */
	uint32_t size;		/* The size of the attribute in bytes */
	uint64_t offset;	/* location of attribute in the object */
	ods_ref_t ext_ref;	/* reference to extended data */
} *sos_attr_data_t;
typedef size_t (*sos_value_size_fn_t)(sos_value_t);
typedef size_t (*sos_value_strlen_fn_t)(sos_value_t);
typedef char *(*sos_value_to_str_fn_t)(sos_value_t, char *, size_t);
typedef int (*sos_value_from_str_fn_t)(sos_value_t, const char *, char **);
typedef void *(*sos_value_key_value_fn_t)(sos_value_t);
typedef struct ods_idx_ref_s {
	ods_idx_t idx;
	sos_part_t part;
	LIST_ENTRY(ods_idx_ref_s) entry;
} *ods_idx_ref_t;
struct sos_index_s {
	char name[SOS_INDEX_NAME_LEN];
	sos_t sos;
	ods_atomic_t part_gn;		/* partition generation number */
	ods_obj_t idx_obj;

	/*
	 * The list of active partition indices. Iteration, search, etc...
	 * consult these indices. The generation number above must match the
	 * number cached in the container for the list here to be valid. If they
	 * don't match, the index is reopened.
	 */
	LIST_HEAD(sos_idx_list_head, ods_idx_ref_s) active_idx_list;
};
struct sos_attr_s {
	sos_attr_data_t data;
	struct sos_attr_data_s data_;

	sos_schema_t schema;
	sos_index_t index;
	char *idx_type;
	char *key_type;
	char *idx_args;
	sos_array_t ext_ptr;
	sos_value_size_fn_t size_fn;
	sos_value_from_str_fn_t from_str_fn;
	sos_value_to_str_fn_t to_str_fn;
	sos_value_strlen_fn_t strlen_fn;
	sos_value_key_value_fn_t key_value_fn;

	TAILQ_ENTRY(sos_attr_s) idx_entry;
	TAILQ_ENTRY(sos_attr_s) entry;
};
typedef struct sos_schema_data_s {
	char name[SOS_SCHEMA_NAME_LEN];
	ods_atomic_t ref_count;
	uuid_t uuid;		/* schema uuid */
	uint32_t attr_cnt;	/* Count of attributes in object class */
	uint32_t array_cnt;	/* Count of array attributes in the object class */
	uint32_t key_sz;	/* Size of largest indexed attribute */
	uint32_t obj_sz;	/* Size of scalars in object */
	uint32_t reserved_0;
	uint32_t el_sz;		/* Size of each element if this is an array object */
	uint32_t reserved_1;
	uint32_t schema_sz;	/* Size of schema, not including arrays */
	ods_atomic_t gen;	/* Generation number */
	struct sos_attr_data_s attr_dict[0];
} *sos_schema_data_t;
enum sos_schema_state {
	SOS_SCHEMA_CLOSED,
	SOS_SCHEMA_OPEN,
};
struct sos_schema_s {
	ods_atomic_t ref_count;
	uint32_t flags;
	sos_schema_data_t data;
	struct sos_schema_data_s data_;
	sos_t sos;
	ods_atomic_t gen;
	enum sos_schema_state state;
	ods_obj_t schema_obj;
	struct ods_rbn name_rbn;
	struct ods_rbn id_rbn;
	sos_attr_t *dict;
	LIST_ENTRY(sos_schema_s) entry;
	TAILQ_HEAD(sos_index_list, sos_attr_s) idx_attr_list;
	TAILQ_HEAD(sos_attr_list, sos_attr_s) attr_list;
};
struct sos_container_config {
	unsigned int options;
	int pos_keep_time;
};
/*
 * The container
 */
struct sos_container_s {
	pthread_mutex_t lock;

	/*
	 * "Path" to the file. This is used as a prefix for all the
	 *  real file paths.
	 */
	char *path;
	ods_perm_t o_perm;
	int o_mode;

	/*
	 * Run time options
	 */
	int bulk_ins_to;	/* The max. number of seconds to queue insert data */
	int bulk_ins_depth;	/* The max. depth of the insert queue */

	/*
	 * Index dictionary - Keeps track of all indices defined on
	 * the Container.
	 */
	ods_idx_t idx_idx;
	ods_t idx_ods;
	ods_obj_t idx_udata;

	/*
	 * The schema dictionary - Keeps track of all Object schema
	 * defined for the Container.
	 */
	ods_idx_t schema_idx;		/* Index schema by name */
	ods_t schema_ods;		/* Contains the schema definitions */
	struct ods_rbt schema_name_rbt;	/* In memory schema tree by name */
	struct ods_rbt schema_id_rbt;	/* In memory schema tree by id */
	size_t schema_count;

	/*
	 * Config - Keeps a dictionary of user-specified configuration
	 * for the Container. Similar to getenv().
	 */
	time_t container_time;	/* Current container timestamp */
	struct sos_container_config config;

	/*
	 * The object partitions
	 */
	ods_atomic_t part_gn;		/* partition generation number */
	ods_obj_t part_ref_udata;	/* SOS_PART_REF_UDATA */
	ods_t part_ref_ods;
	sos_part_t primary_part;
	TAILQ_HEAD(sos_part_list, sos_part_s) part_list;

	LIST_HEAD(obj_list_head, sos_obj_s) obj_list;
	LIST_HEAD(obj_free_list_head, sos_obj_s) obj_free_list;
	LIST_HEAD(schema_list, sos_schema_s) schema_list;

	LIST_ENTRY(sos_container_s) entry;
};
struct sos_config_iter_s {
	ods_t config_ods;
	ods_idx_t config_idx;
	sos_config_t config;
	ods_iter_t iter;
	ods_obj_t obj;
};