sos/python/Sos.pxd

# Copyright (c) 2021 Open Grid Computing, Inc. All rights reserved.
# Copyright (c) 2019 NTESS Corporation. All rights reserved.
# Under the terms of Contract DE-AC04-94AL85000, there is a non-exclusive
# license for use of this work by or on behalf of the U.S. Government.
# Export of this program may require a license from the United States
# Government.
#
# This software is available to you under a choice of one of two
# licenses.  You may choose to be licensed under the terms of the GNU
# General Public License (GPL) Version 2, available from the file
# COPYING in the main directory of this source tree, or the BSD-type
# license below:
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
#
#      Redistributions of source code must retain the above copyright
#      notice, this list of conditions and the following disclaimer.
#
#      Redistributions in binary form must reproduce the above
#      copyright notice, this list of conditions and the following
#      disclaimer in the documentation and/or other materials provided
#      with the distribution.
#
#      Neither the name of NTESS Corporation, Open Grid Computing nor
#      the names of any contributors may be used to endorse or promote
#      products derived from this software without specific prior
#      written permission.
#
#      Modified source versions must be plainly marked as such, and
#      must not be misrepresented as being the original software.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import cython
cimport numpy as np
from libc.stdint cimport *
from libc.string cimport *

cdef extern from "errno.h":
    cdef int errno

    cdef enum:
        E2BIG,
        EACCES,
        EADDRINUSE,
        EADDRNOTAVAIL,
        EAFNOSUPPORT,
        EAGAIN,
        EALREADY,
        EBADE,
        EBADF,
        EBADFD,
        EBADMSG,
        EBADR,
        EBADRQC,
        EBADSLT,
        EBUSY,
        ECHILD,
        ECHRNG,
        ECOMM,
        ECONNABORTED,
        ECONNREFUSED,
        ECONNRESET,
        EDEADLK,
        EDEADLOCK,
        EDESTADDRREQ,
        EDOM,
        EDQUOT,
        EEXIST,
        EFAULT,
        EFBIG,
        EHOSTDOWN,
        EHOSTUNREACH,
        EIDRM,
        EILSEQ,
        EINPROGRESS,
        EINTR,
        EINVAL,
        EIO,
        EISCONN,
        EISDIR,
        EISNAM,
        ELOOP,
        EMFILE,
        EMLINK,
        EMSGSIZE,
        EMULTIHOP,
        ENAMETOOLONG,
        ENETDOWN,
        ENETRESET,
        ENETUNREACH,
        ENFILE,
        ENOBUFS,
        ENODATA,
        ENODEV,
        ENOENT,
        ENOEXEC,
        ENOLCK,
        ENOLINK,
        ENOMEM,
        ENOMSG,
        ENONET,
        ENOPKG,
        ENOPROTOOPT,
        ENOSPC,
        ENOSR,
        ENOSTR,
        ENOSYS,
        ENOTBLK,
        ENOTCONN,
        ENOTDIR,
        ENOTEMPTY,
        ENOTSOCK,
        ENOTSUP,
        ENOTTY,
        ENOTUNIQ,
        ENXIO,
        EOPNOTSUPP,
        EOVERFLOW,
        EPERM,
        EPFNOSUPPORT,
        EPIPE,
        EPROTO,
        EPROTONOSUPPORT,
        EPROTOTYPE,
        ERANGE,
        EREMCHG,
        EREMOTE,
        EREMOTEIO,
        ERESTART,
        EROFS,
        ESHUTDOWN,
        ESPIPE,
        ESOCKTNOSUPPORT,
        ESRCH,
        ESTALE,
        ESTRPIPE,
        ETIME,
        ETIMEDOUT,
        EUSERS,
        EWOULDBLOCK,
        EXFULL

cdef extern from "sys/stat.h":
    cdef struct stat

cdef extern from "sys/time.h":
    ctypedef int time_t
    cdef struct timespec:
        time_t tv_sec
        int64_t tv_nsec

cdef extern from "stdio.h":
    cdef struct _IO_FILE:
        pass
ctypedef _IO_FILE FILE

cdef extern from "unistd.h":
    ctypedef long gid_t
    ctypedef long uid_t

cdef extern from "ods/ods_idx.h":

    cdef struct ods_idx_data_s:
        unsigned char bytes[32]
    ctypedef ods_idx_data_s ods_idx_data_t

    cdef struct ods_timeval_s:
        uint32_t tv_usec
        uint32_t tv_sec

    cdef struct ods_key_value_s:
        uint16_t len
        unsigned char value[0]
        unsigned char byte_[0]
        uint16_t uint16_[0]
        uint32_t uint32_[0]
        uint64_t uint64_[0]
        int16_t int16_[0]
        int32_t int32_[0]
        int64_t int64_[0]
        float float_[0]
        double double_[0]
        long double long_double_[0]
        ods_timeval_s tv_[0]
    ctypedef ods_key_value_s *ods_key_value_t

cdef extern from "config.h":
    cdef char *ODS_COMMIT_ID

cdef extern from "ods/ods.h":
    cdef enum:
        ODS_VER_MAJOR
        ODS_VER_MINOR
        ODS_VER_FIX

    ctypedef uint64_t ods_ref_t
    cdef struct ods_stat:
        timespec st_atim
        timespec st_mtim
        timespec st_ctim
        uint64_t st_size
        uint64_t st_grain_size
        uint64_t st_pg_size
        uint64_t st_pg_count
        uint64_t st_pg_free
        uint64_t st_bkt_count
        uint64_t st_total_blk_free
        uint64_t st_total_blk_alloc
        uint64_t *st_blk_free
        uint64_t *st_blk_alloc
    ctypedef ods_stat *ods_stat_t

    cdef union ods_obj_type_u:
        void *ptr
        int8_t *int8
        uint8_t *uint8
        int16_t *int16
        uint16_t *uint16
        int32_t *int32
        uint32_t *uint32
        int64_t *int64
        uint64_t *uint64
        ods_timeval_s *tv
        char *str
        unsigned char *bytes
        ods_key_value_s *key

    cdef struct ods_obj_s:
        ods_obj_type_u as

cdef extern from "uuid/uuid.h":
    ctypedef unsigned char uuid_t[16];
    void uuid_unparse(uuid_t, char *)
    void uuid_parse(char *, uuid_t)

cdef extern from "sos/sos.h":

    cdef enum:
        SOS_VERS_MAJOR
        SOS_VERS_MINOR
        SOS_VERS_FIX

    cdef struct sos_attr_s
    cdef struct sos_index_s
    cdef struct sos_schema_s
    cdef struct sos_obj_s
    ctypedef sos_attr_s *sos_attr_t
    ctypedef sos_index_s *sos_index_t
    ctypedef sos_schema_s *sos_schema_t
    ctypedef sos_obj_s *sos_obj_t

    cdef enum:
        SOS_SCHEMA_NAME_LEN
        SOS_ATTR_NAME_LEN
        SOS_INDEX_NAME_LEN
        SOS_INDEX_KEY_TYPE_LEN
        SOS_INDEX_TYPE_LEN
        SOS_INDEX_ARGS_LEN

    cdef enum sos_type_e:
        SOS_TYPE_INT16,
        SOS_TYPE_FIRST,
        SOS_TYPE_INT32,
        SOS_TYPE_INT64,
        SOS_TYPE_UINT16,
        SOS_TYPE_UINT32,
        SOS_TYPE_UINT64,
        SOS_TYPE_FLOAT,
        SOS_TYPE_DOUBLE,
        SOS_TYPE_LONG_DOUBLE,
        SOS_TYPE_TIMESTAMP,
        SOS_TYPE_OBJ,
        SOS_TYPE_STRUCT,
        SOS_TYPE_BYTE_ARRAY,
        SOS_TYPE_ARRAY,
        SOS_TYPE_CHAR_ARRAY,
        SOS_TYPE_STRING,
        SOS_TYPE_INT16_ARRAY,
        SOS_TYPE_INT32_ARRAY,
        SOS_TYPE_INT64_ARRAY,
        SOS_TYPE_UINT16_ARRAY,
        SOS_TYPE_UINT32_ARRAY,
        SOS_TYPE_UINT64_ARRAY,
        SOS_TYPE_FLOAT_ARRAY,
        SOS_TYPE_DOUBLE_ARRAY,
        SOS_TYPE_LONG_DOUBLE_ARRAY,
        SOS_TYPE_OBJ_ARRAY,
        SOS_TYPE_JOIN,
        SOS_TYPE_LAST,
    ctypedef sos_type_e sos_type_t

    ctypedef ods_idx_data_t sos_idx_data_t

    cdef struct sos_idx_ref_s:
        uuid_t part_uuid
        ods_ref_t obj

    cdef union sos_obj_ref_s:
        ods_idx_data_t idx_data
        sos_idx_ref_s ref

    ctypedef sos_obj_ref_s sos_obj_ref_t

    void sos_ref_reset(sos_obj_ref_t ref)

    cdef union sos_array_element_u:
        char char_[0]
        uint8_t byte_[0]
        uint16_t uint16_[0]
        uint32_t uint32_[0]
        uint64_t uint64_[0]
        int16_t int16_[0]
        int32_t int32_[0]
        int64_t int64_[0]
        float float_[0]
        double double_[0]
        long double long_double_[0]
        sos_obj_ref_t ref_[0]
    ctypedef sos_array_element_u sos_array_element_t

    cdef struct sos_array_s:
        uint32_t count
        sos_array_element_t data
    ctypedef sos_array_s *sos_array_t

    cdef struct ods_timeval_s:
        uint32_t tv_usec
        uint32_t tv_sec

    cdef struct sos_timeval_s:
        uint32_t usecs
        uint32_t secs

    cdef union sos_timestamp_u:
        uint64_t time
        ods_timeval_s tv
        sos_timeval_s fine

    cdef union sos_primary_u:
        unsigned char byte_
        uint16_t uint16_
        uint32_t uint32_
        uint64_t uint64_
        int16_t int16_
        int32_t int32_
        int64_t int64_
        float float_
        double double_
        long double long_double_
        sos_timestamp_u timestamp_
        sos_obj_ref_s ref_
        uint8_t struc_[0]

    cdef union sos_value_data_u:
        sos_primary_u prim
        sos_array_element_u struc
        sos_array_s array
    ctypedef sos_value_data_u *sos_value_data_t

    cdef struct sos_value_s:
        sos_obj_t obj
        sos_attr_t attr
        sos_value_data_u data_
        sos_value_data_t data
    ctypedef sos_value_s *sos_value_t

    cdef enum sos_cond_e:
        SOS_COND_LT,
        SOS_COND_LE,
        SOS_COND_EQ,
        SOS_COND_GE,
        SOS_COND_GT,
        SOS_COND_NE,
    ctypedef sos_cond_e sos_cond_t

    cdef struct sos_schema_template_attr:
        const char *name
        sos_type_t type
        size_t size
        int indexed
        const char *idx_type
        const char *key_type
        const char *idx_args
    ctypedef sos_schema_template_attr *sos_schema_template_attr_t

    cdef struct sos_schema_template:
        const char *name
        sos_schema_template_attr attrs[0]
    ctypedef sos_schema_template *sos_schema_template_t

    cdef struct sos_container_s:
        pass
    ctypedef sos_container_s *sos_t

    cdef enum sos_perm_e:
        SOS_PERM_RD,
        SOS_PERM_WR,
        SOS_PERM_RW,
        SOS_PERM_CREAT,
        SOS_BE_MMOS,
        SOS_BE_LSOS,
        SOS_PERM_USER

    ctypedef sos_perm_e sos_perm_t

    cdef enum sos_commit_e:
        SOS_COMMIT_ASYNC,
        SOS_COMMIT_SYNC
    ctypedef sos_commit_e sos_commit_t

    cdef struct sos_config_iter_s:
        pass
    ctypedef sos_config_iter_s *sos_config_iter_t

    cdef enum:
        SOS_CONTAINER_NAME_LEN,
        SOS_CONFIG_NAME_LEN
    cdef struct sos_config_data_s:
        char name[SOS_CONFIG_NAME_LEN]
        char value[0]
    ctypedef sos_config_data_s *sos_config_t

    cdef enum:
        SOS_VER
    cdef struct sos_version_s:
        uint8_t major
        uint8_t minor
        uint16_t fix
        char *git_commit_id
